package theory.behaviour.command.withoutCommand;

public class Light {

    public void lightOn() {
        System.out.println("Light on");
    }

    public void lightOff() {
        System.out.println("Light on");
    }

}
