@startuml

title __WITHOUTCOMMAND's Class Diagram__\n

  namespace theory.behaviour.command.withoutCommand {
    class theory.behaviour.command.withoutCommand.AirConditioner {
        + airconditionOff()
        + airconditionOn()
        + temperatureDown()
        + temperatureUp()
    }
  }
  

  namespace theory.behaviour.command.withoutCommand {
    class theory.behaviour.command.withoutCommand.Light {
        + lightOff()
        + lightOn()
    }
  }
  

  namespace theory.behaviour.command.withoutCommand {
    class theory.behaviour.command.withoutCommand.Main {
        {static} + main()
    }
  }
  

  namespace theory.behaviour.command.withoutCommand {
    class theory.behaviour.command.withoutCommand.Remote {
        + Remote()
        + clickButton1()
        + clickButton2()
        + clickButton3()
        + clickButton4()
    }
  }
  

  theory.behaviour.command.withoutCommand.Remote o-- theory.behaviour.command.withoutCommand.AirConditioner : airConditioner
  theory.behaviour.command.withoutCommand.Remote o-- theory.behaviour.command.withoutCommand.Light : light


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
